tests/ui/pattern/suggest-adding-appropriate-missing-pattern-excluding-comments.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/suggest-adding-appropriate-missing-pattern-excluding-comments.rs:4:11
   |
LL |     match Some(1) {
   |           ^^^^^^^ pattern `None` not covered
   |
   = note: the matched value is of type `Option<i32>`
help: ensure that all possible cases are being handled by adding an arm to handle the `None` case
   |
LL ~         Some(_) => {}
LL +         None => { todo!() }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
